--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@google/generative-ai": "^0.3.1",
     "@mui/x-data-grid": "^7.1.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
@@ -17,6 +18,7 @@
     "react-dropzone": "^14.2.3",
     "react-router-dom": "^6.22.1",
     "react-scripts": "5.0.1",
+    "tesseract.js": "^5.0.5",
     "web-vitals": "^2.1.4",
     "web3": "^4.5.0"
   },
