--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "axios": "^1.6.7",
     "crypto": "^1.0.1",
     "crypto-js": "^4.2.0",
+    "dotenv": "^16.4.5",
     "lit-js-sdk": "^1.1.250",
     "material-react-table": "^2.12.1",
     "react": "^18.2.0",
